ARQ-186 Added JVM Arguments support to Configuration of Managed JBoss AS Containers.