@@ -36,9 +36,11 @@ public class JBossASConfiguration implements ContainerConfiguration
 
    private String profileName = "default";
    
-   private String jbossHome = null;
+   private String jbossHome = System.getenv("JBOSS_HOME");
    
-   private String javaHome = null;
+   private String javaHome = System.getenv("JAVA_HOME");
+   
+   private String javaVmArguments = "-Xmx512m -XX:MaxPermSize=128m";
 
    public ContainerProfile getContainerProfile()
    {
@@ -60,6 +62,13 @@ public class JBossASConfiguration implements ContainerConfiguration
       return httpPort;
    }
 
+   /**
+    * Set the HTTP Connect port. <br/>
+    * This is not the JBoss AS HTTP Bind port, bind port must be set in the JBoss XML configuration.<br/>
+    * <b>Only set this if default http port is changed in JBoss AS!</b>
+    * 
+    * @param httpPort HTTP Connect port
+    */
    public void setHttpPort(int httpPort)
    {
       this.httpPort = httpPort;
@@ -97,5 +106,20 @@ public class JBossASConfiguration implements ContainerConfiguration
    public String getJavaHome()
    {
       return javaHome;
+   }
+   
+   /**
+    * This will override the default ("-Xmx512m -XX:MaxPermSize=128m") startup JVM arguments. 
+    * 
+    * @param javaVmArguments use as start up arguments
+    */
+   public void setJavaVmArguments(String javaVmArguments)
+   {
+      this.javaVmArguments = javaVmArguments;
+   }
+   
+   public String getJavaVmArguments()
+   {
+      return javaVmArguments;
    }
 }
